# receipt-scanner-bot

./: .gitignore  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  app.py  cdk.json  pyproject.toml  receipt_scanner_bot.drawio  requirements.txt
.github/workflows/: deploy-prod.yml
lambda/: .dockerignore  Dockerfile  config.py  consumer_handler.py  database_schema_handler.py  database_setup_handler.py  provider_factory.py  provider_interfaces.py  receipt_schemas.py  requirements.txt  schemas.py  telegram_bot_handler.py  telegram_handler.py  webhook_setter_handler.py
lambda/providers/: categories.json  category_manager.py  helpers.py  provider_factory.py  provider_interfaces.py
lambda/providers/image_preprocessor/: pillow_preprocessor.py
lambda/providers/llm/: bedrock_provider.py  openai_provider.py  prompts_manager.py
lambda/providers/ocr/: aws_textract_provider.py  google_vision_provider.py
lambda/providers/storage/: postgresql_storage_provider.py  s3_storage_provider.py
lambda/services/: document_processor_service.py  llm_service.py  message_queue_service.py  orchestrator_service.py  query_service.py  receipt_service.py  result_aggregator_service.py  storage_service.py  telegram_api.py  telegram_service.py
lambda/utils/: categories.json  category_manager.py  helpers.py  llm_client.py
lambda/utils/image_preprocessor/: pillow_preprocessor.py
lambda/utils/llm/: bedrock_provider.py  factory.py  interfaces.py  openai_provider.py  parsers.py  prompts.py
lambda/utils/ocr/: aws_textract_provider.py  factory.py  google_vision_provider.py  interfaces.py  textract_provider.py
lambda/utils/storage/: dynamodb_storage_provider.py  postgresql_storage_provider.py  s3_storage_provider.py
stacks/: receipt_bot_stack.py  receipt_scanner_bot_stack.py
